--- a/index.html
+++ b/index.html
@@ -2,148 +2,70 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SVR Running Groups Dashboard</title>
-    <!-- Bootstrap 5 CSS -->
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Tournament Bracket</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        body {
-            background-color: #f8f9fa;
+        .bracket {
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: start;
+            gap: 2rem;
         }
 
-        .group-card {
-            margin-bottom: 1.5rem;
-        }
-
-        .header {
-            background-color: #343a40;
-            color: white;
+        .match {
+            border: 2px solid #dee2e6;
+            border-radius: 8px;
             padding: 1rem;
-            margin-bottom: 2rem;
+            width: 300px;
+            background: #f8f9fa;
+        }
+
+        .team {
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 0.5rem;
+        }
+
+        .winner {
+            font-weight: bold;
+            color: green;
         }
     </style>
 </head>
 
-<body>
-    <header class="header text-center">
-        <h1>SVR Running Groups Dashboard</h1>
-        <div class="d-flex justify-content-center align-items-center mt-3">
-            <label for="dateInput" class="me-2">Select Date:</label>
-            <input type="date" id="dateInput" class="form-control" style="width: auto;" value="2025-06-16">
-            <button id="fetchDataBtn" class="btn btn-primary ms-2">Fetch Data</button>
-        </div>
-    </header>
+<body class="p-4">
     <div class="container">
-        <div id="groupsContainer" class="row"></div>
-        <div id="loading" class="text-center d-none">
-            <div class="spinner-border" role="status">
-                <span class="visually-hidden">Loading...</span>
-            </div>
-        </div>
-        <div id="error" class="alert alert-danger d-none" role="alert"></div>
+        <h2 class="mb-4">🏆 Quarter Final</h2>
+        <div id="bracket" class="bracket"></div>
     </div>
 
-    <!-- Bootstrap 5 JS and Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
     <script>
-        const dateInput = document.getElementById('dateInput');
-        const fetchDataBtn = document.getElementById('fetchDataBtn');
-        const groupsContainer = document.getElementById('groupsContainer');
-        const loading = document.getElementById('loading');
-        const error = document.getElementById('error');
+        const tournament = [/* your JSON pasted here */];
 
-        // Function to format today's date as YYYY-MM-DD
-        function getTodayDate() {
-            const today = new Date();
-            return today.toISOString().split('T')[0];
-        }
+        const bracketEl = document.getElementById("bracket");
 
-        // Function to fetch and display data
-        async function fetchData(date) {
-            try {
-                // Show loading spinner
-                loading.classList.remove('d-none');
-                error.classList.add('d-none');
-                groupsContainer.innerHTML = '';
+        tournament[0].matches.forEach((match) => {
+            const div = document.createElement("div");
+            div.className = "match";
+            const teamA = Object.keys(match.totalDistance)[0];
+            const teamB = Object.keys(match.totalDistance)[1];
 
-                const response = await fetch(`https://svr-tracker.vercel.app/read-csv?date=${date}`);
-                if (!response.ok) {
-                    throw new Error(`Failed to fetch data: ${response.statusText}`);
-                }
-                const data = await response.json();
-
-                if (data.length === 0) {
-                    throw new Error('No data available for the selected date.');
-                }
-
-                // Create a card for each group
-                data.forEach(group => {
-                    const card = document.createElement('div');
-                    card.className = 'col-md-6 group-card';
-                    card.innerHTML = `
-                        <div class="card shadow">
-                            <div class="card-header bg-primary text-white">
-                                <h5 class="mb-0">${group.group}</h5>
-                            </div>
-                            <div class="card-body">
-                                <table class="table table-striped">
-                                    <thead>
-                                        <tr>
-                                            <th scope="col">Member</th>
-                                            <th scope="col">Distance (km)</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                        ${group.members.map(member => `
-                                            <tr>
-                                                <td>${member.name}</td>
-                                                <td>${member.distance}</td>
-                                            </tr>
-                                        `).join('')}
-                                    </tbody>
-                                    <tfoot>
-                                        <tr class="table-info">
-                                            <th>Total Distance</th>
-                                            <td>${group.totalDistance} km</td>
-                                        </tr>
-                                        <tr class="table-warning">
-                                            <th>Average Distance</th>
-                                            <td>${group.averageDistance} km</td>
-                                        </tr>
-                                    </tfoot>
-                                </table>
-                                <p class="card-text">Members: ${group.memberCount}</p>
-                            </div>
-                        </div>
-                    `;
-                    groupsContainer.appendChild(card);
-                });
-            } catch (err) {
-                error.textContent = err.message;
-                error.classList.remove('d-none');
-            } finally {
-                loading.classList.add('d-none');
-            }
-        }
-
-        // Set default date to today
-        dateInput.value = getTodayDate();
-
-        // Event listener for fetch button
-        fetchDataBtn.addEventListener('click', () => {
-            const selectedDate = dateInput.value;
-            if (selectedDate) {
-                fetchData(selectedDate);
-            } else {
-                error.textContent = 'Please select a date.';
-                error.classList.remove('d-none');
-            }
+            div.innerHTML = `
+        <div class="team ${match.winner === teamA ? 'winner' : ''}">
+          <span>${teamA}</span>
+          <span>${match.totalDistance[teamA]} km</span>
+        </div>
+        <div class="team ${match.winner === teamB ? 'winner' : ''}">
+          <span>${teamB}</span>
+          <span>${match.totalDistance[teamB]} km</span>
+        </div>
+        <div class="text-muted mt-2">Winner: <strong>${match.winner}</strong></div>
+      `;
+            bracketEl.appendChild(div);
         });
-
-        // Initial data fetch
-        fetchData(dateInput.value);
     </script>
 </body>
 
