--- a/index.html
+++ b/index.html
@@ -2,69 +2,153 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tournament Bracket</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SVR 5.0 Tournament Bracket</title>
+    <!-- Bootstrap CSS CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
-        .bracket {
-            display: flex;
-            flex-direction: row;
-            flex-wrap: wrap;
-            justify-content: start;
-            gap: 2rem;
+        body {
+            background-color: #8B0000;
+            /* Merah tua */
+            color: #fff;
+            font-family: Arial, sans-serif;
+            padding: 20px;
         }
 
-        .match {
-            border: 2px solid #dee2e6;
-            border-radius: 8px;
-            padding: 1rem;
-            width: 300px;
-            background: #f8f9fa;
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
         }
 
-        .team {
-            display: flex;
-            justify-content: space-between;
-            margin-bottom: 0.5rem;
+        .header {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+
+        .header h1 {
+            font-size: 2.5rem;
+            color: #FFD700;
+            /* Kuning */
+            text-shadow: 2px 2px 4px #000;
+        }
+
+        .header .sun {
+            font-size: 3rem;
+            color: #FFA500;
+            /* Oranye untuk matahari */
+        }
+
+        #tournament-bracket {
+            margin-top: 20px;
+        }
+
+        .bracket-team {
+            padding: 5px;
+            border: 1px solid #FFD700;
+            border-radius: 5px;
+            margin: 2px 0;
+        }
+
+        .leader {
+            font-weight: bold;
+            color: #FFD700;
+            /* Sorotan kuning untuk pemimpin */
         }
 
         .winner {
+            color: #32CD32;
+            /* Hijau untuk pemenang */
             font-weight: bold;
-            color: green;
         }
     </style>
 </head>
 
-<body class="p-4">
+<body>
     <div class="container">
-        <h2 class="mb-4">🏆 Quarter Final</h2>
-        <div id="bracket" class="bracket"></div>
+        <div class="header">
+            <h1>SVR 5.0 <span class="sun">☀️</span> Tournament Bracket</h1>
+            <p>Update 17 Juni 2025 10:30 AM WIB</p>
+        </div>
+        <div id="tournament-bracket"></div>
     </div>
 
+    <!-- jQuery CDN -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Bracket Plugin (Unduh dari https://www.jqueryscript.net/chart-graph/jQuery-Plugin-For-Customizable-Tournament-Brackets-Bracket.html) -->
+    <script src="path/to/jquery.bracket.min.js"></script>
+    <!-- Bootstrap JS and Popper.js CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
     <script>
-        const tournament = [/* your JSON pasted here */];
+        // Fungsi untuk mengonversi data JSON ke format Bracket plugin
+        function convertToBracketData(data) {
+            const bracketData = [];
+            if (!data || data.length === 0) return bracketData;
 
-        const bracketEl = document.getElementById("bracket");
+            data.forEach(phase => {
+                const roundData = [];
+                phase.matches.forEach((match, index) => {
+                    const [team1, team2] = match.match.split(' vs ');
+                    const team1Score = match.totalDistance[team1];
+                    const team2Score = match.totalDistance[team2];
+                    const winner = match.winner;
 
-        tournament[0].matches.forEach((match) => {
-            const div = document.createElement("div");
-            div.className = "match";
-            const teamA = Object.keys(match.totalDistance)[0];
-            const teamB = Object.keys(match.totalDistance)[1];
+                    roundData.push({
+                        teams: [
+                            `<span class="bracket-team">${team1} (${team1Score} km)${team1Score > team2Score ? ' <span class="leader">(Leading)</span>' : ''}${winner === team1 ? ' <span class="winner">(Winner)</span>' : ''}</span>`,
+                            `<span class="bracket-team">${team2} (${team2Score} km)${team2Score > team1Score ? ' <span class="leader">(Leading)</span>' : ''}${winner === team2 ? ' <span class="winner">(Winner)</span>' : ''}</span>`
+                        ],
+                        score: [team1Score, team2Score]
+                    });
+                });
 
-            div.innerHTML = `
-        <div class="team ${match.winner === teamA ? 'winner' : ''}">
-          <span>${teamA}</span>
-          <span>${match.totalDistance[teamA]} km</span>
-        </div>
-        <div class="team ${match.winner === teamB ? 'winner' : ''}">
-          <span>${teamB}</span>
-          <span>${match.totalDistance[teamB]} km</span>
-        </div>
-        <div class="text-muted mt-2">Winner: <strong>${match.winner}</strong></div>
-      `;
-            bracketEl.appendChild(div);
+                bracketData.push({
+                    title: phase.title,
+                    results: roundData
+                });
+            });
+
+            return bracketData;
+        }
+
+        // Fungsi untuk merender bracket
+        function renderTournament(data) {
+            const bracketData = convertToBracketData(data);
+            if (bracketData.length === 0) {
+                $('#tournament-bracket').html('<p class="text-center">No tournament data available</p>');
+                return;
+            }
+
+            $('#tournament-bracket').bracket({
+                init: bracketData,
+                teamWidth: 200, // Lebar setiap tim
+                scoreWidth: 50, // Lebar skor
+                roundMargin: 20, // Jarak antar ronde
+                matchMargin: 20, // Jarak antar pertandingan
+                centerConnectors: true // Garis penghubung di tengah
+            });
+        }
+
+        // Ambil data dari endpoint
+        async function fetchTournamentData() {
+            try {
+                const response = await fetch('https://svr-tracker.vercel.app/tournament-matches');
+                const data = await response.json();
+                if (data.error) throw new Error(data.error);
+                if (data.message) {
+                    $('#tournament-bracket').html('<p class="text-center">' + data.message + '</p>');
+                } else {
+                    renderTournament(data);
+                }
+            } catch (error) {
+                $('#tournament-bracket').html('<p class="text-center text-danger">Error: ' + error.message + '</p>');
+            }
+        }
+
+        // Panggil fungsi saat halaman dimuat
+        $(document).ready(function () {
+            fetchTournamentData();
         });
     </script>
 </body>
