--- a/index.html
+++ b/index.html
@@ -10,17 +10,11 @@
     <style>
         body {
             background-color: #f8f9fa;
+            padding: 20px 0;
         }
 
         .match-card {
             margin-bottom: 1.5rem;
-        }
-
-        .header {
-            background-color: #343a40;
-            color: white;
-            padding: 1rem;
-            margin-bottom: 2rem;
         }
 
         .match-header {
@@ -31,51 +25,113 @@
         .match-pair {
             display: flex;
             justify-content: space-between;
-            align-items: center;
+            align-items: stretch;
             margin-bottom: 1rem;
         }
 
-        .group-box {
+        .group-card {
             flex: 1;
-            padding: 10px;
-            border: 2px solid #007bff;
-            border-radius: 5px;
-            text-align: center;
-            background-color: #fff;
-            color: #000;
             margin: 0 5px;
-            min-width: 0;
+            border: none;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: transform 0.2s;
         }
 
-        .winner {
-            color: #28a745;
-            /* Hijau untuk pemenang */
+        .group-card:hover {
+            transform: scale(1.02);
+        }
+
+        .group-card .card-header {
+            padding: 10px;
+            border-radius: 5px 5px 0 0;
+            background-color: #007bff;
+            color: white;
+            font-weight: bold;
+            transition: background-color 0.3s;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .group-card .card-body {
+            padding: 10px;
+            min-height: 100px;
+            background-color: #fff;
+        }
+
+        .group-card .card-body ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
+
+        .group-card .card-body ul li {
+            padding: 2px 0;
+            font-size: 0.9rem;
+        }
+
+        .group-card .card-footer {
+            padding: 10px;
+            border-top: 1px solid #ddd;
+            background-color: #f8f9fa;
             font-weight: bold;
         }
 
-        .distance {
+        .winner .card-header {
+            background-color: #ff4500;
+            /* Merah seperti api untuk pemenang */
+        }
+
+        .winner-indicator {
             font-size: 0.9rem;
-            margin: 0;
+            padding: 2px 6px;
+            border-radius: 3px;
+            background-color: rgba(255, 255, 255, 0.2);
+        }
+
+        .bracket-label {
+            font-style: italic;
+            color: #6c757d;
+            margin-bottom: 10px;
+            font-size: 1.1rem;
+            font-weight: bold;
+            text-transform: uppercase;
+        }
+
+        .upper-bracket {
+            background-color: #e6f3ff;
+            /* Biru muda untuk Upper Bracket */
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 4px 12px rgba(0, 123, 255, 0.3);
+            margin-bottom: 20px;
+        }
+
+        .lower-bracket {
+            background-color: #ffe6e6;
+            /* Merah muda untuk Lower Bracket */
+            padding: 15px;
+            border-radius: 10px;
+            box-shadow: 0 4px 12px rgba(255, 69, 0, 0.3);
+            margin-bottom: 20px;
+        }
+
+        .bracket-separator {
+            border: 1px dashed #ccc;
+            margin: 20px 0;
         }
 
         .vs-text {
             font-weight: bold;
             color: #343a40;
             margin: 0 10px;
+            align-self: center;
+            font-size: 1.2rem;
         }
     </style>
 </head>
 
 <body>
-    <header class="header text-center">
-        <h1>SVR Tournament Matches Dashboard</h1>
-        <div class="d-flex justify-content-center align-items-center mt-3">
-            <label for="dateInput" class="me-2">Select Date Range:</label>
-            <input type="date" id="dateInput" class="form-control" style="width: auto;" value="2025-06-16">
-            <input type="date" id="dateInputEnd" class="form-control ms-2" style="width: auto;" value="2025-06-17">
-            <button id="fetchDataBtn" class="btn btn-primary ms-2">Fetch Data</button>
-        </div>
-    </header>
     <div class="container">
         <div id="matchesContainer" class="row"></div>
         <div id="loading" class="text-center d-none">
@@ -90,21 +146,12 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
     <script>
-        const dateInput = document.getElementById('dateInput');
-        const dateInputEnd = document.getElementById('dateInputEnd');
-        const fetchDataBtn = document.getElementById('fetchDataBtn');
         const matchesContainer = document.getElementById('matchesContainer');
         const loading = document.getElementById('loading');
         const error = document.getElementById('error');
 
-        // Function to get today's date as YYYY-MM-DD
-        function getTodayDate() {
-            const today = new Date();
-            return today.toISOString().split('T')[0]; // 2025-06-17
-        }
-
         // Function to fetch and display data
-        async function fetchData(startDate, endDate) {
+        async function fetchData() {
             try {
                 // Show loading spinner
                 loading.classList.remove('d-none');
@@ -118,10 +165,10 @@
                 const data = await response.json();
 
                 if (data.length === 0 || !data.some(phase => phase.matches.length > 0)) {
-                    throw new Error('No match data available for the selected date range.');
+                    throw new Error('No match data available.');
                 }
 
-                // Filter and render matches based on phases
+                // Render matches based on phases
                 data.forEach(phase => {
                     const phaseMatches = phase.matches;
                     if (phaseMatches.length > 0) {
@@ -133,33 +180,81 @@
                                     <h5 class="mb-0">${phase.title} (${phase.start} - ${phase.end})</h5>
                                 </div>
                                 <div class="card-body">
-                                    ${phaseMatches.map(match => {
+                                    <div class="upper-bracket">
+                                        <div class="bracket-label">Upper Bracket</div>
+                                        ${phaseMatches.slice(0, phaseMatches.length / 2).map(match => {
                             const [group1, group2] = match.match.split(' vs ');
-                            const day1 = Object.keys(match.distances)[0];
-                            const day2 = Object.keys(match.distances)[1];
-                            const group1Total = match.totalDistance[group1];
-                            const group2Total = match.totalDistance[group2];
+                            const group1Total = parseFloat(match.totalDistance[group1]);
+                            const group2Total = parseFloat(match.totalDistance[group2]);
 
-                            // Placeholder member names (replace with actual data if available)
-                            const group1Members = ["Kartika", "Helmi K", "Abdillah", "Rosmini"]; // Example from image
-                            const group2Members = ["Fajar Alamanda", "Ucha", "Hendrawan", "Rahmat W"]; // Example from image
+                            // Ambil nama anggota dari data JSON
+                            const group1Members = match.members[group1].map(m => m.name);
+                            const group2Members = match.members[group2].map(m => m.name);
+
+                            const isGroup1Winner = match.winner === group1;
+                            const isGroup2Winner = match.winner === group2;
 
                             return `
-                                            <div class="match-pair">
-                                                <div class="group-box">
-                                                    <h6>${group1Members.join(', ')}</h6>
-                                                    <p class="distance">Total: ${group1Total} km</p>
-                                                    ${match.winner === group1 ? '<p class="winner">Winner 🔥</p>' : ''}
+                                                <div class="match-pair">
+                                                    <div class="group-card ${isGroup1Winner ? 'winner' : ''}">
+                                                        <div class="card-header">
+                                                            ${group1}
+                                                            ${isGroup1Winner ? '<span class="winner-indicator">Leading 🔥</span>' : ''}
+                                                        </div>
+                                                        <div class="card-body"><ul>${group1Members.map(m => `<li>${m}</li>`).join('')}</ul></div>
+                                                        <div class="card-footer">Total: ${group1Total} km</div>
+                                                    </div>
+                                                    <span class="vs-text">vs</span>
+                                                    <div class="group-card ${isGroup2Winner ? 'winner' : ''}">
+                                                        <div class="card-header">
+                                                            ${group2}
+                                                            ${isGroup2Winner ? '<span class="winner-indicator">Leading 🔥</span>' : ''}
+                                                        </div>
+                                                        <div class="card-body"><ul>${group2Members.map(m => `<li>${m}</li>`).join('')}</ul></div>
+                                                        <div class="card-footer">Total: ${group2Total} km</div>
+                                                    </div>
                                                 </div>
-                                                <span class="vs-text">vs</span>
-                                                <div class="group-box">
-                                                    <h6>${group2Members.join(', ')}</h6>
-                                                    <p class="distance">Total: ${group2Total} km</p>
-                                                    ${match.winner === group2 ? '<p class="winner">Winner 🔥</p>' : ''}
-                                                </div>
-                                            </div>
-                                        `;
+                                            `;
                         }).join('')}
+                                    </div>
+                                    <div class="bracket-separator"></div>
+                                    <div class="lower-bracket">
+                                        <div class="bracket-label">Lower Bracket</div>
+                                        ${phaseMatches.slice(phaseMatches.length / 2).map(match => {
+                            const [group1, group2] = match.match.split(' vs ');
+                            const group1Total = parseFloat(match.totalDistance[group1]);
+                            const group2Total = parseFloat(match.totalDistance[group2]);
+
+                            // Ambil nama anggota dari data JSON
+                            const group1Members = match.members[group1].map(m => m.name);
+                            const group2Members = match.members[group2].map(m => m.name);
+
+                            const isGroup1Winner = match.winner === group1;
+                            const isGroup2Winner = match.winner === group2;
+
+                            return `
+                                                <div class="match-pair">
+                                                    <div class="group-card ${isGroup1Winner ? 'winner' : ''}">
+                                                        <div class="card-header">
+                                                            ${group1}
+                                                            ${isGroup1Winner ? '<span class="winner-indicator">Leading 🔥</span>' : ''}
+                                                        </div>
+                                                        <div class="card-body"><ul>${group1Members.map(m => `<li>${m}</li>`).join('')}</ul></div>
+                                                        <div class="card-footer">Total: ${group1Total} km</div>
+                                                    </div>
+                                                    <span class="vs-text">vs</span>
+                                                    <div class="group-card ${isGroup2Winner ? 'winner' : ''}">
+                                                        <div class="card-header">
+                                                            ${group2}
+                                                            ${isGroup2Winner ? '<span class="winner-indicator">Leading 🔥</span>' : ''}
+                                                        </div>
+                                                        <div class="card-body"><ul>${group2Members.map(m => `<li>${m}</li>`).join('')}</ul></div>
+                                                        <div class="card-footer">Total: ${group2Total} km</div>
+                                                    </div>
+                                                </div>
+                                            `;
+                        }).join('')}
+                                    </div>
                                 </div>
                             </div>
                         `;
@@ -174,24 +269,8 @@
             }
         }
 
-        // Set default date range to today and next day
-        dateInput.value = getTodayDate(); // 2025-06-17
-        dateInputEnd.value = new Date(new Date().setDate(new Date().getDate() + 1)).toISOString().split('T')[0]; // 2025-06-18
-
-        // Event listener for fetch button
-        fetchDataBtn.addEventListener('click', () => {
-            const startDate = dateInput.value;
-            const endDate = dateInputEnd.value;
-            if (startDate && endDate) {
-                fetchData(startDate, endDate);
-            } else {
-                error.textContent = 'Please select a date range.';
-                error.classList.remove('d-none');
-            }
-        });
-
         // Initial data fetch
-        fetchData(dateInput.value, dateInputEnd.value);
+        fetchData();
     </script>
 </body>
 
